<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toBottomOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardlist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp">
                                <TextView
                                    android:id="@+id/item_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginBottom="8dp"
                                    android:textSize="16sp"
                                    android:textStyle="bold"

                                    tools:text="@string/product_name"
                                    android:layout_marginLeft="20dp" />
                                <TextView
                                    android:id="@+id/item_stock"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"

                                    android:layout_below="@id/item_name"
                                    tools:text="@string/stock" />
                                <TextView
                                    android:id="@+id/item_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"

                                    tools:text="@string/price"
                                    android:layout_below="@id/item_stock" />

                                <Button
                                    android:text="Edit"
                                    android:gravity="center_vertical|center_horizontal"
                                    android:layout_width="70dp"
                                    android:layout_height="50dp"
                                    android:layout_marginEnd="16dp"
                                    android:id="@+id/itemEdit"
                                    android:onClick="dataedit"
                                    app:backgroundTint="@color/colorPrimaryDark"
                                    android:lines="4"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="16dp" />
                        </RelativeLayout>
                </androidx.cardview.widget.CardView>
        </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>